--- a/Federated_Learning_with_Encrypted_Gradient_Aggregation_using_PyTorch_+_PySyft.ipynb
+++ b/Federated_Learning_with_Encrypted_Gradient_Aggregation_using_PyTorch_+_PySyft.ipynb
@@ -65,7 +65,11 @@
       "metadata": {
         "id": "PgCacd5GRhGO",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "c829dfac-a759-45fa-9c4f-7dd69fca4f99"
       },
       "source": [
         "!pip install tf-encrypted\n",
@@ -85,18 +89,121 @@
         "!pip install --upgrade --force-reinstall websockets\n",
         "!pip install --upgrade --force-reinstall zstd"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting tf-encrypted\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/07/ce/da9916e7e78f736894b15538b702c0b213fd5d60a7fd6e481d74033a90c0/tf_encrypted-0.5.6-py3-none-manylinux1_x86_64.whl (1.4MB)\n",
+            "\u001b[K     |████████████████████████████████| 1.4MB 3.6MB/s \n",
+            "\u001b[?25hRequirement already satisfied: tensorflow<2,>=1.12.0 in /usr/local/lib/python3.6/dist-packages (from tf-encrypted) (1.14.0)\n",
+            "Requirement already satisfied: numpy>=1.14.0 in /usr/local/lib/python3.6/dist-packages (from tf-encrypted) (1.16.4)\n",
+            "Collecting pyyaml>=5.1 (from tf-encrypted)\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/a3/65/837fefac7475963d1eccf4aa684c23b95aa6c1d033a2c5965ccb11e22623/PyYAML-5.1.1.tar.gz (274kB)\n",
+            "\u001b[K     |████████████████████████████████| 276kB 62.9MB/s \n",
+            "\u001b[?25hRequirement already satisfied: tensorflow-estimator<1.15.0rc0,>=1.14.0rc0 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2,>=1.12.0->tf-encrypted) (1.14.0)\n",
+            "Requirement already satisfied: protobuf>=3.6.1 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2,>=1.12.0->tf-encrypted) (3.7.1)\n",
+            "Requirement already satisfied: tensorboard<1.15.0,>=1.14.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2,>=1.12.0->tf-encrypted) (1.14.0)\n",
+            "Requirement already satisfied: keras-preprocessing>=1.0.5 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2,>=1.12.0->tf-encrypted) (1.1.0)\n",
+            "Requirement already satisfied: astor>=0.6.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2,>=1.12.0->tf-encrypted) (0.8.0)\n",
+            "Requirement already satisfied: wheel>=0.26 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2,>=1.12.0->tf-encrypted) (0.33.4)\n",
+            "Requirement already satisfied: termcolor>=1.1.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2,>=1.12.0->tf-encrypted) (1.1.0)\n",
+            "Requirement already satisfied: gast>=0.2.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2,>=1.12.0->tf-encrypted) (0.2.2)\n",
+            "Requirement already satisfied: wrapt>=1.11.1 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2,>=1.12.0->tf-encrypted) (1.11.2)\n",
+            "Requirement already satisfied: google-pasta>=0.1.6 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2,>=1.12.0->tf-encrypted) (0.1.7)\n",
+            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2,>=1.12.0->tf-encrypted) (1.12.0)\n",
+            "Requirement already satisfied: keras-applications>=1.0.6 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2,>=1.12.0->tf-encrypted) (1.0.8)\n",
+            "Requirement already satisfied: absl-py>=0.7.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2,>=1.12.0->tf-encrypted) (0.7.1)\n",
+            "Requirement already satisfied: grpcio>=1.8.6 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2,>=1.12.0->tf-encrypted) (1.15.0)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from protobuf>=3.6.1->tensorflow<2,>=1.12.0->tf-encrypted) (41.0.1)\n",
+            "Requirement already satisfied: werkzeug>=0.11.15 in /usr/local/lib/python3.6/dist-packages (from tensorboard<1.15.0,>=1.14.0->tensorflow<2,>=1.12.0->tf-encrypted) (0.15.4)\n",
+            "Requirement already satisfied: markdown>=2.6.8 in /usr/local/lib/python3.6/dist-packages (from tensorboard<1.15.0,>=1.14.0->tensorflow<2,>=1.12.0->tf-encrypted) (3.1.1)\n",
+            "Requirement already satisfied: h5py in /usr/local/lib/python3.6/dist-packages (from keras-applications>=1.0.6->tensorflow<2,>=1.12.0->tf-encrypted) (2.8.0)\n",
+            "Building wheels for collected packages: pyyaml\n",
+            "  Building wheel for pyyaml (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Stored in directory: /root/.cache/pip/wheels/16/27/a1/775c62ddea7bfa62324fd1f65847ed31c55dadb6051481ba3f\n",
+            "Successfully built pyyaml\n",
+            "Installing collected packages: pyyaml, tf-encrypted\n",
+            "  Found existing installation: PyYAML 3.13\n",
+            "    Uninstalling PyYAML-3.13:\n",
+            "      Successfully uninstalled PyYAML-3.13\n",
+            "Successfully installed pyyaml-5.1.1 tf-encrypted-0.5.6\n",
+            "Cloning into 'PySyft'...\n",
+            "remote: Enumerating objects: 1, done.\u001b[K\n",
+            "remote: Counting objects: 100% (1/1), done.\u001b[K\n",
+            "remote: Total 28035 (delta 0), reused 1 (delta 0), pack-reused 28034\u001b[K\n",
+            "Receiving objects: 100% (28035/28035), 31.83 MiB | 26.94 MiB/s, done.\n",
+            "Resolving deltas: 100% (18523/18523), done.\n",
+            "zip_safe flag not set; analyzing archive contents...\n",
+            "zip_safe flag not set; analyzing archive contents...\n",
+            "__pycache__.zstd.cpython-36: module references __file__\n",
+            "Collecting lz4\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/0a/c6/96bbb3525a63ebc53ea700cc7d37ab9045542d33b4d262d0f0408ad9bbf2/lz4-2.1.10-cp36-cp36m-manylinux1_x86_64.whl (385kB)\n",
+            "\u001b[K     |████████████████████████████████| 389kB 3.5MB/s \n",
+            "\u001b[31mERROR: syft 0.1.21a1 has requirement msgpack>=0.6.1, but you'll have msgpack 0.5.6 which is incompatible.\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: lz4\n",
+            "  Found existing installation: lz4 2.1.10\n",
+            "    Uninstalling lz4-2.1.10:\n",
+            "      Successfully uninstalled lz4-2.1.10\n",
+            "Successfully installed lz4-2.1.10\n",
+            "Collecting websocket\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/f2/6d/a60d620ea575c885510c574909d2e3ed62129b121fa2df00ca1c81024c87/websocket-0.2.1.tar.gz (195kB)\n",
+            "\u001b[K     |████████████████████████████████| 204kB 3.4MB/s \n",
+            "\u001b[?25hCollecting gevent (from websocket)\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/f2/ca/5b5962361ed832847b6b2f9a2d0452c8c2f29a93baef850bb8ad067c7bf9/gevent-1.4.0-cp36-cp36m-manylinux1_x86_64.whl (5.5MB)\n",
+            "\u001b[K     |████████████████████████████████| 5.5MB 61.4MB/s \n",
+            "\u001b[?25hCollecting greenlet (from websocket)\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/bf/45/142141aa47e01a5779f0fa5a53b81f8379ce8f2b1cd13df7d2f1d751ae42/greenlet-0.4.15-cp36-cp36m-manylinux1_x86_64.whl (41kB)\n",
+            "\u001b[K     |████████████████████████████████| 51kB 29.5MB/s \n",
+            "\u001b[?25hBuilding wheels for collected packages: websocket\n",
+            "  Building wheel for websocket (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Stored in directory: /root/.cache/pip/wheels/35/f7/5c/9e8243838269ea93f05295708519a6e183fa6b515d9ce3b636\n",
+            "Successfully built websocket\n",
+            "Installing collected packages: greenlet, gevent, websocket\n",
+            "  Found existing installation: greenlet 0.4.15\n",
+            "    Uninstalling greenlet-0.4.15:\n",
+            "      Successfully uninstalled greenlet-0.4.15\n",
+            "  Found existing installation: gevent 1.4.0\n",
+            "    Uninstalling gevent-1.4.0:\n",
+            "      Successfully uninstalled gevent-1.4.0\n",
+            "Successfully installed gevent-1.4.0 greenlet-0.4.15 websocket-0.2.1\n",
+            "Collecting websockets\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/43/71/8bfa882b9c502c36e5c9ef6732969533670d2b039cbf95a82ced8f762b80/websockets-7.0-cp36-cp36m-manylinux1_x86_64.whl (63kB)\n",
+            "\u001b[K     |████████████████████████████████| 71kB 3.4MB/s \n",
+            "\u001b[31mERROR: syft 0.1.21a1 has requirement msgpack>=0.6.1, but you'll have msgpack 0.5.6 which is incompatible.\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: websockets\n",
+            "  Found existing installation: websockets 7.0\n",
+            "    Uninstalling websockets-7.0:\n",
+            "      Successfully uninstalled websockets-7.0\n",
+            "Successfully installed websockets-7.0\n",
+            "Collecting zstd\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/8e/27/1ea8086d37424e83ab692015cc8dd7d5e37cf791e339633a40dc828dfb74/zstd-1.4.0.0.tar.gz (450kB)\n",
+            "\u001b[K     |████████████████████████████████| 450kB 3.5MB/s \n",
+            "\u001b[?25hBuilding wheels for collected packages: zstd\n",
+            "  Building wheel for zstd (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Stored in directory: /root/.cache/pip/wheels/ad/9a/f4/3105b5209674ac77fcca7fede95184c62a95df0196888e0e76\n",
+            "Successfully built zstd\n",
+            "\u001b[31mERROR: syft 0.1.21a1 has requirement msgpack>=0.6.1, but you'll have msgpack 0.5.6 which is incompatible.\u001b[0m\n",
+            "Installing collected packages: zstd\n",
+            "  Found existing installation: zstd 1.4.0.0\n",
+            "    Uninstalling zstd-1.4.0.0:\n",
+            "      Successfully uninstalled zstd-1.4.0.0\n",
+            "Successfully installed zstd-1.4.0.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "p3FrYjQyHkF2",
         "colab_type": "code",
-        "outputId": "74410ea6-6c7a-43b6-8570-8873b329214e",
+        "outputId": "05706249-473b-41a3-9bc9-53304890e4a1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 124
+          "height": 34
         }
       },
       "source": [
@@ -110,31 +217,17 @@
         "# clearing data of virutal workers.\n",
         "bob.clear_objects\n",
         "alice.clear_objects\n",
-        "secure_worker.clear_objects"
+        "secure_worker.clear_objects\n",
+        "compute_nodes = [bob, alice]"
       ],
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "WARNING: Logging before flag parsing goes to stderr.\n",
-            "W0704 07:38:03.639271 139888138553216 secure_random.py:26] Falling back to insecure randomness since the required custom op could not be found for the installed version of TensorFlow. Fix this by compiling custom ops. Missing file was '/usr/local/lib/python3.6/dist-packages/tf_encrypted/operations/secure_random/secure_random_module_tf_1.14.0.so'\n",
-            "W0704 07:38:03.659491 139888138553216 deprecation_wrapper.py:119] From /usr/local/lib/python3.6/dist-packages/tf_encrypted/session.py:26: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
-            "\n"
+            "W0705 11:46:37.567617 140710606256000 hook.py:98] Torch was already hooked... skipping hooking process\n"
           ],
           "name": "stderr"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<bound method BaseWorker.clear_objects of <VirtualWorker id:secure_worker #objects:0>>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 3
         }
       ]
     },
@@ -143,7 +236,7 @@
       "metadata": {
         "id": "ETjSGBFnTDIv",
         "colab_type": "code",
-        "outputId": "fc04d58b-e51d-4619-f7ab-4d122229d884",
+        "outputId": "4615b225-769c-40cb-98f2-ccabde1c687e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -168,19 +261,19 @@
         "\n",
         "torch.manual_seed(args.seed)"
       ],
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<torch._C.Generator at 0x7f39d11b7810>"
+              "<torch._C.Generator at 0x7ff950032990>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 7
         }
       ]
     },
@@ -189,7 +282,7 @@
       "metadata": {
         "id": "tb0_fFNtEP1V",
         "colab_type": "code",
-        "outputId": "230720cf-bce5-4f66-8687-cc2a18d7730b",
+        "outputId": "832a8a7b-ba8c-4186-f4a1-df82ef1fc0f6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -200,7 +293,7 @@
         "device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
         "print(device)"
       ],
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -226,23 +319,93 @@
       "metadata": {
         "id": "z-Z8C53wThHr",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 260
+        },
+        "outputId": "2d9797f2-23e3-4948-a846-81bc4e6af8eb"
       },
       "source": [
         "# FederatedDataLoader \n",
         "# we distribute the dataset across all the workers, it's now a FederatedDataset\n",
         "transform=transforms.Compose([transforms.ToTensor(),\n",
         "                              transforms.Normalize((0.1307,), (0.3081,))]) \n",
-        "mnist_trainset = datasets.MNIST(root='../data', train=True, download=True, transform=transform).federate((bob, alice))\n",
+        "mnist_trainset = datasets.MNIST(root='../data', train=True, download=True, transform=transform)\n",
+        "test_loader = torch.utils.data.DataLoader(mnist_trainset, batch_size=args.test_batch_size, shuffle=True)\n",
+        "\n",
+        "\n",
         "mnist_testset = datasets.MNIST(root='../data', train=False, download=True, transform=transform)\n",
-        "bob_trainset = mnist_trainset.datasets['bob']\n",
-        "alice_trainset = mnist_trainset.datasets['alice']\n",
-        "bob_train_loader = torch.utils.data.DataLoader(bob_trainset, batch_size=args.batch_size, shuffle=True)\n",
-        "alice_train_loader = torch.utils.data.DataLoader(alice_trainset, batch_size=args.batch_size, shuffle=True)\n",
-        "test_loader = torch.utils.data.DataLoader(mnist_testset, batch_size=args.test_batch_size, shuffle=True)"
+        "test_loader = torch.utils.data.DataLoader(mnist_testset, batch_size=args.test_batch_size, shuffle=True)\n",
+        "\n",
+        "private_test_loader = []\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "  0%|          | 0/9912422 [00:00<?, ?it/s]"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to ../data/MNIST/raw/train-images-idx3-ubyte.gz\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "9920512it [00:00, 20864201.10it/s]                            \n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Extracting ../data/MNIST/raw/train-images-idx3-ubyte.gz\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "32768it [00:00, 311986.87it/s]                           \n",
+            "0it [00:00, ?it/s]"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to ../data/MNIST/raw/train-labels-idx1-ubyte.gz\n",
+            "Extracting ../data/MNIST/raw/train-labels-idx1-ubyte.gz\n",
+            "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to ../data/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "1654784it [00:00, 5348977.32it/s]                           \n",
+            "8192it [00:00, 131474.23it/s]\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Extracting ../data/MNIST/raw/t10k-images-idx3-ubyte.gz\n",
+            "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to ../data/MNIST/raw/t10k-labels-idx1-ubyte.gz\n",
+            "Extracting ../data/MNIST/raw/t10k-labels-idx1-ubyte.gz\n",
+            "Processing...\n",
+            "Done!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -311,9 +474,7 @@
       },
       "source": [
         "model = Classifier()\n",
-        "model = model.to(device)\n",
-        "bob_model = model.copy().send(bob)\n",
-        "alice_model = model.copy().send(alice)"
+        "model = model.to(device)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -394,7 +555,7 @@
         "            \n",
         "#             data, target = data.to(device), target.to(device)\n",
         "#             output = model(data)\n",
-        "            \n",
+        "            0.\n",
         "#             test_loss += F.nll_loss(output, target, reduction='sum').item()\n",
         "#             pred = output.argmax(1, keepdim=True) # get the index of the max log-probability \n",
         "            \n",
